feat: playerCount
